@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-22 DP         Allow the admin modules to be built with PGXS if required
+                      [August Zajonc]
 2006-02-21 MH         Reject invalid command line options in pgAgent
 2006-02-21 MH         Minimal linking for pgAgent under *nix
 2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
